Create CursorHoverSystem and HandCollisionSystem

--- a/src/hub.html
+++ b/src/hub.html
@@ -523,8 +523,7 @@
             id="cursor-controller"
             cursor-controller="
                 cursor: #cursor;
-                camera: #player-camera;
-                objects: .collidable, .interactable, .ui;"
+                camera: #player-camera;"
         ></a-entity>
 
         <a-sphere
